// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pruebas de GifGrid Debe de mostrar items cuando se cargan imagenes useFetchGifs 1`] = `
<Fragment>
  <h3>
     
    Voy
     
  </h3>
  <div
    className="card-grid"
  >
    <GifGidItem
      id="Hola bebe"
      key="[object Object]"
      title="Cualquier cosa"
      url="https://www.google.com"
    />
  </div>
</Fragment>
`;

exports[`Pruebas de GifGrid Debe mostrar el componente correctamente 1`] = `
<Fragment>
  <h3>
     
    Voy
     
  </h3>
  <p>
    Cargando
  </p>
  <div
    className="card-grid"
  />
</Fragment>
`;
